--- a/foursquare-oauth-library/build.gradle
+++ b/foursquare-oauth-library/build.gradle
@@ -27,7 +27,7 @@ signing {
 
 uploadArchives {
     repositories {
-        mavenDeployer {
+        /*mavenDeployer {
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
@@ -91,6 +91,6 @@ uploadArchives {
                     }
                 }
             }
-        }
+        }*/
     }
 }
